--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: flutter_proxy
-description: A new Flutter project.
+description: It supports macOS, iOS, and Android platforms, and can obtain the address and port number of the current device's proxy, making it convenient to automatically set the proxy for dio.
 version: 0.0.1
-homepage:
+homepage: https://github.com/Crazy-MT/flutter_proxy
+repository: https://github.com/redevRx/Flutter-ChatGPT
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
