--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_proxy
+name: flutter_proxy_native
 description: It supports macOS, iOS, and Android platforms, and can obtain the address and port number of the current device's proxy, making it convenient to automatically set the proxy for dio.
 version: 0.0.1
 homepage: https://github.com/Crazy-MT/flutter_proxy
